[metadata]
long_description = file: README.md
long_description_content_type = text/markdown
classifiers :
    License :: OSI Approved :: MIT License
    Development Status :: 3 - Alpha
    Framework :: AsyncIO
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
maintainer = gateio
maintainer_email = dev@mail.gate.io

[flake8]
max-line-length = 120